--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,11 @@ html, body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   position: absolute;
   top: 0;
   left: 0;
-  justify-content: center;
+  align-items: center;
   color: white;
   opacity: 0.8;
   user-select: none;
