init main container

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@ html, body {
   padding: 0;
 }
 
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
+body {
+  overflow: auto;
+  height: 100%;
+}
+
 .text-container {
   z-index: 100;
   width: 100vw;
