--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,4 +1,8 @@
 .navbar-container {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 80dvw;
     max-width: 650px;
     height: 55px;
@@ -6,4 +10,66 @@
     margin-top: 20px;
     border-radius: 35px;
     backdrop-filter: blur(10px);
+    padding: 0px 5px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    list-style: none;
+}
+
+.navbar li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.4);
+    text-shadow: 1px 1px rgba(0,0,0,0.1);
+    font-size: 2.2rem;
+    padding: 0px 25px;
+    border-radius: 25px;
+    scale: 0.9;
+    width: auto;
+    height: 42px;
+    transition: 0.3s;
+}
+
+.navbar li:hover {
+    scale: 0.95;
+    transition: 0.3s;
+    box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.6);
+}
+
+.navbar li:active {
+    scale: 0.9;
+    transition: 0.1s;
+}
+
+#joinus-btn {
+    scale: 1;
+    background: rgb(255, 123, 0);
+    transition: 0.3s;
+}
+
+#joinus-btn:hover {
+    background: white;
+    color: black;
+    transition: 0.3s;
+}
+
+#joinus-btn:active {
+    scale: 0.95;
+    transition: 0.1s;
+}
+
+.navbar-right {
+    display: flex;
+    gap: 15px;
+}
+
+.navbar-right li {
+    padding: 0px 30px;
 }
