--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -10,7 +10,28 @@
     margin-top: 20px;
     border-radius: 35px;
     backdrop-filter: blur(10px);
-    padding: 0px 5px;
+    padding: 0px 12px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
     list-style: none;
+}
+
+.navbar li {
+    background: rgba(255, 255, 255, 0.4);
+    font-size: 2.2rem;
+    line-height: 0;
+    padding: 15px 15px;
+    padding-top: 19px;
+    border-radius: 25px;
+}
+
+.navbar-right {
+    display: flex;
+    gap: 20px;
 }
 
