--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -23,10 +23,10 @@
 
 .navbar li {
     background: rgba(255, 255, 255, 0.4);
-    font-size: 2.2rem;
+    font-size: 1.2rem;
     line-height: 0;
-    padding: 15px 15px;
-    padding-top: 19px;
+    padding: 17px 17px;
+    font-weight: 800;
     border-radius: 25px;
     transition: 0.3s;
 }
