--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -23,6 +23,8 @@
 
 /* New styles for enhanced landing page */
 .mainpage-container {
+  margin-top: 100px;
+  border-radius: 15px 15px 0px 0px;
   min-height: 100vh;
   position: relative;
   overflow: hidden;
