--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -38,6 +38,12 @@
   z-index: 1;
 }
 
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .mainpage-circle {
   position: absolute;
   border-radius: 50%;
