--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -27,8 +27,9 @@
   border-radius: 15px 15px 0px 0px;
   min-height: 100vh;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #0d1117;
+  padding-bottom: 100px;
 }
 
 .mainpage-background {
