--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -23,13 +23,11 @@
 
 /* New styles for enhanced landing page */
 .mainpage-container {
-  margin-top: 100px;
-  border-radius: 15px 15px 0px 0px;
   min-height: 100vh;
+  min-width: 100vw;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: #0d1117;
-  padding-bottom: 100px;
 }
 
 .mainpage-background {
@@ -40,6 +38,8 @@
 }
 
 .main-header {
+  margin-top: 60px;
+  margin-bottom: -30px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -221,4 +221,15 @@
   .mainpage-mission-text {
       font-size: 1rem;
   }
+
+  .main-header h1 {
+    padding-top: 20px;
+    font-size: 1.7rem;
+  }
+
+  .main-header span {
+    padding-top: 20px;
+  }
+
+
 }
