--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -26,7 +26,7 @@
   min-height: 100vh;
   min-width: 100vw;
   position: relative;
-  overflow: hidden;
+  overflow: scroll;
   background-color: #0d1117;
 }
 
