updated nav for mobile

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -186,6 +186,9 @@
     .navnew-container {
         background: rgba(0, 0, 0, 0.3);
         backdrop-filter: blur(10px);
-        border-radius: 35px;
+        border-radius: 0px;
+        top: 0;
+        width: 100dvw;
+        height: 70px;
     }
 }
