--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,10 @@ body {
 }
 
 .text-container {
+  box-sizing: border-box;
   z-index: 100;
-  width: 100vw;
-  height: 100vh;
+  height: 100dvh;
+  width: 100dvw;
   display: flex;
   flex-direction: column;
   position: absolute;
