--- a/src/components/Pages/Joinus/Joinus.css
+++ b/src/components/Pages/Joinus/Joinus.css
@@ -143,7 +143,8 @@
    
     .joinus-container{
         background: #0d1117;
-        padding-top: 50px;
+        width: 100%;
+        height: 100%;
     }
 
     .joinus-card {
