--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body {
   width: 100dvw;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   align-items: center;
