--- a/src/components/Pages/Joinus/Joinus.css
+++ b/src/components/Pages/Joinus/Joinus.css
@@ -143,6 +143,7 @@
    
     .joinus-container{
         background: #0d1117;
+        padding-top: 50px;
         width: 100%;
         height: 100%;
     }
