--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -167,7 +167,7 @@
   }
 
   .wave {
-      font-size: 40px;
+      font-size: 50px;
   }
 
   .mainpage-content {
@@ -191,11 +191,7 @@
   }
 
   .main-header h1 {
-    padding-top: 20px;
-    font-size: 1.7rem;
-  }
-
-  .main-header span {
-    padding-top: 20px;
+    font-size: 2rem;
+    line-height: 40px;
   }
 }
