--- a/src/components/Pages/Members/Members.css
+++ b/src/components/Pages/Members/Members.css
@@ -44,7 +44,7 @@
   .mainpage-title {
     font-size: 3rem;
     color: white;
-    margin: 0;
+    margin-bottom: 30px;
   }
   
   .mainpage-card {
@@ -148,10 +148,6 @@
     .main-header h1 {
       font-size: 2rem;
       line-height: 40px;
-    }
-  
-    .mainpage-container {
-      padding-bottom: 100px;
     }
   }
   
