--- a/src/components/Pages/Projects/Projects.css
+++ b/src/components/Pages/Projects/Projects.css
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 2rem;
     background-color: #0d1117;
-    min-height: 100vh;
+    height: 100%;
     justify-content: center;
   }
   
