--- a/src/components/Pages/Projects/Projects.css
+++ b/src/components/Pages/Projects/Projects.css
@@ -72,6 +72,7 @@
 .project-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
 }
 
 .project-image {
