--- a/src/components/Pages/Projects/Projects.css
+++ b/src/components/Pages/Projects/Projects.css
@@ -4,7 +4,7 @@
   min-width: 100%;
   background-color: #0d1117;
   padding: 2rem;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .projects-content {
