--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -23,8 +23,8 @@
 
 /* New styles for enhanced landing page */
 .mainpage-container {
-  min-height: 100vh;
-  min-width: 100vw;
+  min-height: 100%;
+  min-width: 100%;
   overflow: scroll;
   background-color: #0d1117;
 }
@@ -193,9 +193,5 @@
   .main-header h1 {
     font-size: 2rem;
     line-height: 40px;
-  }
-
-  .mainpage-container {
-    padding-bottom: 100px;
   }
 }
