--- a/src/components/Pages/Joinus/Joinus.css
+++ b/src/components/Pages/Joinus/Joinus.css
@@ -5,8 +5,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100dvw;
-    height: 100dvh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
