style for mobile

--- a/src/components/Pages/Joinus/Joinus.css
+++ b/src/components/Pages/Joinus/Joinus.css
@@ -146,7 +146,7 @@
 @media (max-width: 768px) {
    
     .joinus-container{
-        background: #0d1117;
+        background: #3e281a;
         padding-top: 50px;
         width: 100%;
         height: 100%;
