--- a/src/components/Pages/Members/Members.css
+++ b/src/components/Pages/Members/Members.css
@@ -150,5 +150,9 @@
       font-size: 2rem;
       line-height: 40px;
     }
+
+    .memberspage-container {
+      background: #14252d;
+    }
   }
   
