--- a/src/components/Pages/Projects/Projects.css
+++ b/src/components/Pages/Projects/Projects.css
@@ -15,7 +15,7 @@
 
 .projects-title {
   text-align: center;
-  margin: 80px 0 40px 0;
+  margin: 80px 0px 0px 0px;
   color: white;
   font-size: 3rem;
 }
