--- a/src/components/Pages/Members/Members.css
+++ b/src/components/Pages/Members/Members.css
@@ -3,7 +3,6 @@
     justify-content: center;
     min-height: 100%;
     min-width: 100%;
-    background-color: #0d1117; /* Same background color */
     color: #fff;
     font-family: 'Arial', sans-serif;
     text-align: center;
@@ -49,7 +48,7 @@
   }
   
   .memberspage-card {
-    background: rgba(255, 255, 255, 0.05);
+    background: rgba(0, 0, 0, 0.45);
     backdrop-filter: blur(10px);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -153,6 +152,10 @@
 
     .memberspage-container {
       background: #14252d;
+    }
+
+    .memberspage-card {
+      background: rgba(255, 255, 255, 0.05);
     }
   }
   
