--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -5,7 +5,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  background: #1a1a1a;
+  background: #1a1a1ada;
 }
 
 .animated-logo {
@@ -44,6 +44,17 @@
   border: 1px solid rgba(255, 255, 255, 0.1);
   font-size: 1.25rem;
   line-height: 1.6;
+}
+
+.main-call-to-action-btn {
+  padding: 5px 15px;
+  border-radius: 10px;
+  border: none;
+  margin-top: 35px;
+  font-size: 2.5rem;
+  font-weight: 800;
+  background: linear-gradient(90deg, #ff6200, #ff4400);
+  color: white;
 }
 
 @keyframes gradientFlow {
