--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -18,6 +18,7 @@
   color: transparent;
   animation: gradientFlow 8s linear infinite;
   margin-bottom: -10px;
+  animation: fadeIn 1s ease-in;
 }
 
 .logo-underline {
@@ -81,6 +82,15 @@
   }
   100% {
     background-position: 0% 50%;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
